# dictationHub

./: README.md  pyproject.toml
scripts/: setup_mic_toggle.sh
src/mic_transcribe/: cli.py  dictate.py  mic.py  stats.py
src/mic_transcribe/backends/: canary.py  cohere.py  parakeet.py  parakeet_v2.py  parakeet_v3.py  qwen.py
