[project]
name = "mic-transcribe"
version = "0.1.0"
description = "Live microphone transcription using Cohere, Qwen3-ASR, or NVIDIA Canary models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sounddevice>=0.5",
    "numpy>=1.26",
    "soundfile>=0.13",
]

[project.scripts]
mic-transcribe = "mic_transcribe.cli:main"

[project.optional-dependencies]
cohere = [
    "transformers>=5.4.0",
    "torch>=2.4",
    "huggingface-hub>=0.25",
    "sentencepiece>=0.2",
    "protobuf>=5.0",
    "librosa>=0.10",
    "accelerate>=1.0",
]
qwen = [
    "qwen-asr>=0.0.6",
    "torch>=2.4",
    "librosa>=0.10",
    "accelerate>=1.12",
]
canary = [
    "nemo_toolkit[asr] @ git+https://github.com/NVIDIA/NeMo.git@v2.7.2",
    "torch>=2.6,<2.8",
]
parakeet = [
    "transformers>=4.57,<5.0",
    "torch>=2.4",
    "huggingface-hub>=0.25",
]
parakeet-v2 = [
    "nemo_toolkit[asr] @ git+https://github.com/NVIDIA/NeMo.git@v2.7.2",
    "torch>=2.6,<2.8",
]
parakeet-v3 = [
    "transformers>=5.4.0",
    "torch>=2.4",
    "huggingface-hub>=0.25",
]

[tool.uv]
conflicts = [
    [
        { extra = "cohere" },
        { extra = "qwen" },
        { extra = "canary" },
        { extra = "parakeet" },
        { extra = "parakeet-v2" },
        { extra = "parakeet-v3" },
    ],
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mic_transcribe"]
